@@ -1,4 +1,4 @@
-package ma.emsi.g1.tp0boujjaaya;
+package ma.emsi.g1.tp0boujjaaya.jsf;
 
 
 
@@ -173,8 +173,8 @@ public class Bb implements Serializable {
                 are you tell them the average price of a meal.
                 """;
         listeSystemRoles.add(new SelectItem(role, "Guide touristique"));
-        //pour présélectionne le premier rôle de la liste.
-                this.systemRole = (String) listeSystemRoles.get(0).getValue();
+        //ceci présélectionne le premier rôle de la liste.
+                this.systemRole = (String) listeSystemRoles.getFirst().getValue();
         return listeSystemRoles;
     }
 }
